# HW-os

./: .gitignore
homework_2/: Makefile  copy.cpp
homework_3/: Makefile  shell.cpp
homework_4/: Makefile  main.cpp  matrix.cpp  matrix.h
homework_5/: Makefile  main.cpp  parallel_scheduler.cpp  parallel_scheduler.h
homework_6/: Makefile  signal_handling  signal_handling.cpp
homework_7/: Makefile  consumer.cpp  producer.cpp
homework_8/: Makefile  main.cpp
homework_9/: CMakeLists.txt  main.cpp
homework_9/lib/: http.cpp  http.h
